--- a/index.html
+++ b/index.html
@@ -11,13 +11,25 @@
     
     <div class="wrapper">
         <h1>Morse Code Simulator</h1>
-        <img src="button.png" id="button">
+        <button id="button">Click Me</button>
     </div>
-  
-    <div class="result">
-        <div class="input"></div>
-        <div class="output"></div>
+
+<div class="action">
+    <div class="container">
+        <div class="result">
+            <div class="input"></div>
+            <div class="output"></div>
+        </div>
+
+        <div class="bottom-btn">
+            <button id="restart"></button>
+            <button id="backspace">Backspace</button>
+        </div>
     </div>
+</div>
+
+
+
 
 </body>
 </html>
