added other symbols and fixed a bug

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
             <button id="restart"></button>
             <button id="backspace">Backspace</button>
           </div>
+          <p class="meaning">Note: dot "." means short and dash "-" means long.</p>
         </div>
       </div>
-
+      
       <div class="characters">
         <div class="characters-inner">
           <h2>Characters</h2>
